--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mairala</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="css/style.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-    <link href="css/style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6de7bf9b0a.js" crossorigin="anonymous"></script>
 </head>
 
@@ -50,18 +51,69 @@
 
             <div class="carousel-item active">
                 <img src="img/bg-1.png" alt="Carousel Image " class="img-fluid">
+                <div class="carousel-caption d-none d-md-block hero-copy">
+                    <h2>
+                        <span class="first-line">Grab Your Copy Of</span>
+                        <br>
+                        <span class="second-line"> The <span class="brown-color">Premium</span> Quality</span>
+                        <br>
+                        <span class="second-line">PSD Template For <span class="brown-color">free</span></span>
+                    </h2>
+                    <a href="#" class="download-btn">
+                        <span class="btn-text">
+                            Download
+                            <i class="fas fa-download ml-2 mb-1"></i>
+                        </span>
+                    </a>
+                </div>
             </div>
 
             <div class="carousel-item">
                 <img src="img/bg-2.png" alt="Carousel Image " class="img-fluid">
+                <div class="carousel-caption d-none d-md-block hero-copy">
+                    <h2>
+                        <span class="first-line">Grab Your Copy Of</span>
+                        <br>
+                        <span class="second-line"> The <span class="brown-color">Premium</span> Quality</span>
+                        <br>
+                        <span class="second-line">PSD Template For <span class="brown-color">free</span></span>
+                    </h2>
+                    <a href="#" class="download-btn">
+                        <span class="btn-text">
+                            Download
+                            <i class="fas fa-download ml-2 mb-1"></i>
+                        </span>
+                    </a>
+                </div>
             </div>
 
             <div class="carousel-item">
                 <img src="img/bg-3.png" alt="Carousel Image " class="img-fluid">
+                <div class="carousel-caption d-none d-md-block hero-copy">
+                    <h2>
+                        <span class="first-line">Grab Your Copy Of</span>
+                        <br>
+                        <span class="second-line"> The <span class="brown-color">Premium</span> Quality</span>
+                        <br>
+                        <span class="second-line">PSD Template For <span class="brown-color">free</span></span>
+                    </h2>
+                    <a href="#" class="download-btn">
+                        <span class="btn-text">
+                            Download
+                            <i class="fas fa-download ml-2 mb-1"></i>
+                        </span>
+                    </a>
+                </div>
             </div>
-
-
         </div>
+        <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
 
     <!--- Welcome Section -->
