finsh whit out the css
finshed whit the final touched of css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
         <div class="container-fluid m-nav-space">
-            <h1 class="text-white">Mairala</h1>
+            <h1 class="text-white logo">Mairala</h1>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -160,28 +160,260 @@
         </div>
 
     </div>
-    <!--- Two Column Section -->
+    <!--- Blog -->
+    <div class="container-fluid padding">
+        <div class="row text-center padding">
+            <div class="col-12">
+                <h3 class="display-5">our blog</h3>
+                <hr />
+                <P>Nam liber tempor cum soluta nobis eleifend option
+                    congue nihil imperdiet doming id quod mazim </P>
+            </div>
 
 
-    <!--- Fixed background -->
 
 
-    <!--- Emoji Section -->
+
+            <div class="col-12 d-flex justify-content-center">
+                <div class="col-4">
+                    <img src="img/blog.png" alt="blog" class="img-fluid">
+                </div>
+
+                <dir class="col-4 text-left">
+                    <p class="date">20 March 2014</p>
+                    <p>
+                        Typi non habent claritatem insitam
+                    </p>
+                    <p>
+                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                        esse molestie consequat, vel illum dolore eu feugiat nulla
+                        facilisis at vero eros et accumsan et iusto odio dignissim qui [...]
+                    </p>
+                </dir>
+
+            </div>
+
+            <div class="col-12 d-flex justify-content-center">
+                <dir class="col-4 text-right">
+                    <p class="date">20 March 2014</p>
+                    <p>
+                        Typi non habent claritatem insitam
+                    </p>
+                    <p>
+                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                        esse molestie consequat, vel illum dolore eu feugiat nulla
+                        facilisis at vero eros et accumsan et iusto odio dignissim qui [...]
+                    </p>
+                </dir>
+                <div class="col-4">
+                    <img src="img/blog.png" alt="blog" class="img-fluid">
+                </div>
+
+            </div>
+
+            <div class="col-12 d-flex justify-content-center">
+                <div class="col-4">
+                    <img src="img/blog.png" alt="blog" class="img-fluid">
+                </div>
+
+                <dir class="col-4 text-left">
+                    <p class="date">20 March 2014</p>
+                    <p>
+                        Typi non habent claritatem insitam
+                    </p>
+                    <p>
+                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit
+                        esse molestie consequat, vel illum dolore eu feugiat nulla
+                        facilisis at vero eros et accumsan et iusto odio dignissim qui [...]
+                    </p>
+                </dir>
+
+            </div>
+        </div>
+    </div>
 
 
-    <!--- Meet the team -->
+    <!--- Contact -->
+
+    <div class="container-fluid contact-padding contact">
+        <div class="row text-center">
+            <div class="col-12">
+                <h3 class="display-5">Contact</h3>
+
+            </div>
+        </div>
+        <form>
+            <div class="form-row">
+                <div class="col mr-5">
+                    <input type="text" class="form-control" id="name">
+                    <label for="name">Name*</label>
+                </div>
+                <div class="col">
+                    <input type="text" class="form-control" id="email">
+                    <label for="email">Email*</label>
+                </div>
+                <div class="col-12">
+                    <input type="text" class="form-control" id="message">
+                    <label for="message">Message</label>
+                </div>
+            </div>
+            <hr>
 
 
-    <!--- Cards -->
+            <a href="#" class="d-flex justify-content-center submit-btn">Submit</a>
+
+        </form>
+    </div>
+    <!-- Footer -->
+    <footer class="page-footer font-small blue pt-4">
+
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left footerpad footer-text-color>
+
+            <!-- Grid row -->
+            <div class=" row">
+
+            <!-- Grid column -->
+            <div class="col-md-4 mt-md-0 mt-3">
+
+                <!-- Content -->
+                <h1 class="text-black logo">Mairala</h1>
+                <p class="footer-text-color">
+                    Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                    illum dolore.</p>
+                <p class="footer-text-color">
+                    eugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                    luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta
+                </p>
 
 
-    <!--- Two Column Section -->
+            </div>
+            <!-- Grid column -->
+
+            <hr class="clearfix w-100 d-md-none pb-3">
+
+            <!-- Grid column -->
+            <div class="col-md-1 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase text-white">Links</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <p class="footer-text-color">Link 1</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 2</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 3</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 4</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-1 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase text-white">Links</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <p class="footer-text-color">Link 1</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 2</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 3</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 4</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+            <!-- Grid column -->
+            <div class="col-md-1 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase text-white">Links</h5>
+
+                <ul class="list-unstyled">
+                    <li>
+                        <p class="footer-text-color">Link 1</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 2</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 3</p>
+                    </li>
+                    <li>
+                        <p class="footer-text-color">Link 4</a>
+                    </li>
+                </ul>
+
+            </div>
+            <!-- Grid column -->
+
+            <div class="col-md-5 mt-md-0 mt-3">
+
+                <!-- Content -->
+                <h4 class="text-black text-white">Our Address</h4>
+                <p class="footer-text-color">
+                    Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
+                    etiam processus dynamicus,luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                    Nam liber tempor cum soluta
+                </p>
+                <ul>
+                    <li>
+                        <p class="footer-text-color">
+                            <i class="fas fa-map-marker-alt"></i>
+                            Moonshine St. 14/05 Light,Jupiter
+                        </p>
+                    </li>
+
+                    <li>
+                        <p class="footer-text-color">
+                            <i class="fas fa-phone"></i>
+                            00 (123) 456 78 90
+                        </p>
+                    </li>
 
 
-    <!--- Connect -->
+                    <li>
+                        <p class="footer-text-color">
+                            <i class="fas fa-envelope"></i>
+                            first.last@email.com
+                        </p>
+                    </li>
+                </ul>
 
 
-    <!--- Footer -->
+            </div>
+
+        </div>
+        <!-- Grid row -->
+
+        </div>
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3" style="color:#595959">
+            ©2014 Imran Khan All Rights Reserved
+        </div>
+        <!-- Copyright -->
+
+    </footer>
+    <!-- Footer -->
 
 
 
