--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </form>
     </div>
     <!-- Footer -->
-    <footer class="page-footer font-small blue pt-4">
+    <footer class="page-footer font-small blue">
 
         <!-- Footer Links -->
         <div class="container-fluid text-center text-md-left footerpad footer-text-color>
@@ -293,23 +293,24 @@
             <hr class="clearfix w-100 d-md-none pb-3">
 
             <!-- Grid column -->
-            <div class="col-md-1 mb-md-0 mb-3">
+            <div class="col-md-3 mb-md-0 mb-3">
 
                 <!-- Links -->
-                <h5 class="text-uppercase text-white">Links</h5>
+                <h5 class="text-uppercase text-white">Recent Posts</h5>
 
                 <ul class="list-unstyled">
                     <li>
-                        <p class="footer-text-color">Link 1</p>
+                        <p class="date-footer ">March 30, 2014</p>
+                        <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
                     </li>
                     <li>
-                        <p class="footer-text-color">Link 2</p>
+                        <p class="date-footer ">March 30, 2014</p>
+                        <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
                     </li>
+
                     <li>
-                        <p class="footer-text-color">Link 3</p>
-                    </li>
-                    <li>
-                        <p class="footer-text-color">Link 4</a>
+                        <p class="date-footer ">March 30, 2014</p>
+                        <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
                     </li>
                 </ul>
 
@@ -317,54 +318,32 @@
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-1 mb-md-0 mb-3">
+            <div class="col-md-2 mb-md-0 mb-3">
 
                 <!-- Links -->
-                <h5 class="text-uppercase text-white">Links</h5>
+                <h5 class="text-uppercase text-white">Twiter Feeds</h5>
 
                 <ul class="list-unstyled">
                     <li>
-                        <p class="footer-text-color">Link 1</p>
+                        <p class="date-footer ">about 2 days ago <span class="twitter">@kristianplatt</span> </p>
+                        <p class="footer-text-color postfooter">Good work buddy</p>
                     </li>
                     <li>
-                        <p class="footer-text-color">Link 2</p>
+                        <p class="date-footer ">about 2 days ago <span class="twitter">@fasteven</span> </p>
+                        <p class="footer-text-color postfooter">Good work buddy</p>
                     </li>
                     <li>
-                        <p class="footer-text-color">Link 3</p>
-                    </li>
-                    <li>
-                        <p class="footer-text-color">Link 4</a>
+                        <p class="date-footer ">about 2 days ago <span class="twitter">@streamer</span> </p>
+                        <p class="footer-text-color postfooter">Good work buddy</p>
                     </li>
                 </ul>
 
             </div>
             <!-- Grid column -->
 
-            <!-- Grid column -->
-            <div class="col-md-1 mb-md-0 mb-3">
 
-                <!-- Links -->
-                <h5 class="text-uppercase text-white">Links</h5>
 
-                <ul class="list-unstyled">
-                    <li>
-                        <p class="footer-text-color">Link 1</p>
-                    </li>
-                    <li>
-                        <p class="footer-text-color">Link 2</p>
-                    </li>
-                    <li>
-                        <p class="footer-text-color">Link 3</p>
-                    </li>
-                    <li>
-                        <p class="footer-text-color">Link 4</a>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- Grid column -->
-
-            <div class="col-md-5 mt-md-0 mt-3">
+            <div class="col-md-3 mt-md-0 mt-3">
 
                 <!-- Content -->
                 <h4 class="text-black text-white">Our Address</h4>
