--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="#portfolio" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Team</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="#blog" class="nav-link">Blog</a></li>
+                    <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -40,7 +40,7 @@
 
     <!--- Image Slider -->
 
-    <div id="slides" class="carousel slide" data-ride="carousel">
+    <div id="slides" class="carousel slide padding-bottom " data-ride="carousel">
         <ul class="carousel-indicators">
             <li data-target="#slides" data-slide-to="0" class="active"></li>
             <li data-target="#slides" data-slide-to="1"></li>
@@ -116,14 +116,14 @@
         </a>
     </div>
 
-    <!--- Welcome Section -->
-    <div class="container-fluid padding">
+    <!--- About Section -->
+    <div class="container-fluid padding-bottom " id="about">
         <div class=" row text-center">
             <div class="col-12">
-                <h1 class="display-4">service we provide</h1>
+                <h2 class="first-line brown-color text-uppercase">service we provide</h2>
             </div>
-            <div class="col-12">
-                <p class="lead">
+            <div class="col-md-6 mx-auto col-sm-12 col-xs-12">
+                <p>
                     Volutpat wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
                     aliquip ex ea commodo
                     consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,
@@ -134,24 +134,24 @@
         </div>
     </div>
     <!--- Three Column Section -->
-    <div class="container-fluid padding">
+    <div class="container-fluid padding-bottom " id="portfolio">
         <div class="row text-center padding">
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <i class="fas fa-users"></i>
+            <div class="col-xs-12 col-sm-6 col-md-2 offset-3 ">
+                <i class="fas fa-users brown-color icons-font"></i>
                 <h3>Consultancy</h3>
                 <p>Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare
                     quam </p>
             </div>
 
-            <div class="col-xs-12 col-sm-6 col-md-4">
-                <i class="fas fa-bullhorn"></i>
+            <div class="col-xs-12 col-sm-6 col-md-2 ">
+                <i class="fas fa-bullhorn  brown-color icons-font"></i>
                 <h3>Maketing</h3>
                 <p>Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare
                     quam </p>
             </div>
 
-            <div class=" col-sm-12 col-md-4">
-                <i class="fas fa-flask"></i>
+            <div class=" col-sm-12 col-md-2  ">
+                <i class="fas fa-flask  brown-color icons-font"></i>
                 <h3>Reaserch</h3>
                 <p>Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare
                     quam </p>
@@ -161,13 +161,17 @@
 
     </div>
     <!--- Blog -->
-    <div class="container-fluid padding">
-        <div class="row text-center padding">
-            <div class="col-12">
-                <h3 class="display-5">our blog</h3>
+    <div class="container-fluid" id="blog">
+        <div class="row text-center">
+            <div class="col-12 mb-5">
+                <h3 class="display-5 brown-color text-uppercase">our blog</h3>
                 <hr />
-                <P>Nam liber tempor cum soluta nobis eleifend option
-                    congue nihil imperdiet doming id quod mazim </P>
+                <div class="col-md-4 mx-auto">
+                    <P>
+                        Nam liber tempor cum soluta nobis eleifend option
+                        congue nihil imperdiet doming id quod mazim
+                    </P>
+                </div>
             </div>
 
 
@@ -235,7 +239,7 @@
 
     <!--- Contact -->
 
-    <div class="container-fluid contact-padding contact">
+    <div class="container-fluid contact-padding contact" id="contact">
         <div class="row text-center">
             <div class="col-12">
                 <h3 class="display-5">Contact</h3>
