--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         </div>
     </div>
     <!--- Three Column Section -->
-    <div class="container-fluid padding-bottom " id="portfolio">
+    <div class="container-fluid " id="portfolio">
         <div class="row text-center padding">
-            <div class="col-xs-12 col-sm-6 col-md-2 offset-3 ">
+            <div class="col-xs-12 col-sm-6 col-md-2 offset-3 padding-bottom ">
                 <i class="fas fa-users brown-color icons-font"></i>
                 <h3>Consultancy</h3>
                 <p>Claritas est etiam processus dynaicus qui sequitur mutationem consuetudium lectorum. Mirum est notare
@@ -272,119 +272,119 @@
     <footer class="page-footer font-small blue">
 
         <!-- Footer Links -->
-        <div class="container-fluid text-center text-md-left footerpad footer-text-color>
+        <div class="container-fluid text-center text-md-left footerpad footer-text-color">
 
             <!-- Grid row -->
             <div class=" row">
 
-            <!-- Grid column -->
-            <div class="col-md-4 mt-md-0 mt-3">
+                <!-- Grid column -->
+                <div class="col-md-4 mt-md-0 mt-3">
 
-                <!-- Content -->
-                <h1 class="text-black logo">Mairala</h1>
-                <p class="footer-text-color">
-                    Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
-                    illum dolore.</p>
-                <p class="footer-text-color">
-                    eugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-                    luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta
-                </p>
+                    <!-- Content -->
+                    <h1 class="text-black logo">Mairala</h1>
+                    <p class="footer-text-color">
+                        Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel
+                        illum dolore.</p>
+                    <p class="footer-text-color">
+                        eugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
+                        luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta
+                    </p>
 
+
+                </div>
+                <!-- Grid column -->
+
+                <hr class="clearfix w-100 d-md-none pb-3">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-md-0 mb-3">
+
+                    <!-- Links -->
+                    <h5 class="text-uppercase text-white">Recent Posts</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <p class="date-footer ">March 30, 2014</p>
+                            <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
+                        </li>
+                        <li>
+                            <p class="date-footer ">March 30, 2014</p>
+                            <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
+                        </li>
+
+                        <li>
+                            <p class="date-footer ">March 30, 2014</p>
+                            <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-2 mb-md-0 mb-3">
+
+                    <!-- Links -->
+                    <h5 class="text-uppercase text-white">Twiter Feeds</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <p class="date-footer ">about 2 days ago <span class="twitter">@kristianplatt</span> </p>
+                            <p class="footer-text-color postfooter">Good work buddy</p>
+                        </li>
+                        <li>
+                            <p class="date-footer ">about 2 days ago <span class="twitter">@fasteven</span> </p>
+                            <p class="footer-text-color postfooter">Good work buddy</p>
+                        </li>
+                        <li>
+                            <p class="date-footer ">about 2 days ago <span class="twitter">@streamer</span> </p>
+                            <p class="footer-text-color postfooter">Good work buddy</p>
+                        </li>
+                    </ul>
+
+                </div>
+                <!-- Grid column -->
+
+
+
+                <div class="col-md-3 mt-md-0 mt-3">
+
+                    <!-- Content -->
+                    <h4 class="text-black text-white">Our Address</h4>
+                    <p class="footer-text-color">
+                        Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
+                        etiam processus dynamicus,luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                        Nam liber tempor cum soluta
+                    </p>
+                    <ul>
+                        <li>
+                            <p class="footer-text-color">
+                                <i class="fas fa-map-marker-alt"></i>
+                                Moonshine St. 14/05 Light,Jupiter
+                            </p>
+                        </li>
+
+                        <li>
+                            <p class="footer-text-color">
+                                <i class="fas fa-phone"></i>
+                                00 (123) 456 78 90
+                            </p>
+                        </li>
+
+
+                        <li>
+                            <p class="footer-text-color">
+                                <i class="fas fa-envelope"></i>
+                                first.last@email.com
+                            </p>
+                        </li>
+                    </ul>
+
+
+                </div>
 
             </div>
-            <!-- Grid column -->
-
-            <hr class="clearfix w-100 d-md-none pb-3">
-
-            <!-- Grid column -->
-            <div class="col-md-3 mb-md-0 mb-3">
-
-                <!-- Links -->
-                <h5 class="text-uppercase text-white">Recent Posts</h5>
-
-                <ul class="list-unstyled">
-                    <li>
-                        <p class="date-footer ">March 30, 2014</p>
-                        <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
-                    </li>
-                    <li>
-                        <p class="date-footer ">March 30, 2014</p>
-                        <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
-                    </li>
-
-                    <li>
-                        <p class="date-footer ">March 30, 2014</p>
-                        <p class="footer-text-color postfooter">Duis autem vel eum iriure dolo</p>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-2 mb-md-0 mb-3">
-
-                <!-- Links -->
-                <h5 class="text-uppercase text-white">Twiter Feeds</h5>
-
-                <ul class="list-unstyled">
-                    <li>
-                        <p class="date-footer ">about 2 days ago <span class="twitter">@kristianplatt</span> </p>
-                        <p class="footer-text-color postfooter">Good work buddy</p>
-                    </li>
-                    <li>
-                        <p class="date-footer ">about 2 days ago <span class="twitter">@fasteven</span> </p>
-                        <p class="footer-text-color postfooter">Good work buddy</p>
-                    </li>
-                    <li>
-                        <p class="date-footer ">about 2 days ago <span class="twitter">@streamer</span> </p>
-                        <p class="footer-text-color postfooter">Good work buddy</p>
-                    </li>
-                </ul>
-
-            </div>
-            <!-- Grid column -->
-
-
-
-            <div class="col-md-3 mt-md-0 mt-3">
-
-                <!-- Content -->
-                <h4 class="text-black text-white">Our Address</h4>
-                <p class="footer-text-color">
-                    Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
-                    etiam processus dynamicus,luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-                    Nam liber tempor cum soluta
-                </p>
-                <ul>
-                    <li>
-                        <p class="footer-text-color">
-                            <i class="fas fa-map-marker-alt"></i>
-                            Moonshine St. 14/05 Light,Jupiter
-                        </p>
-                    </li>
-
-                    <li>
-                        <p class="footer-text-color">
-                            <i class="fas fa-phone"></i>
-                            00 (123) 456 78 90
-                        </p>
-                    </li>
-
-
-                    <li>
-                        <p class="footer-text-color">
-                            <i class="fas fa-envelope"></i>
-                            first.last@email.com
-                        </p>
-                    </li>
-                </ul>
-
-
-            </div>
-
-        </div>
-        <!-- Grid row -->
+            <!-- Grid row -->
 
         </div>
         <!-- Footer Links -->
