--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <div class="container-fluid text-center text-md-left footerpad footer-text-color">
 
             <!-- Grid row -->
-            <div class=" row">
+            <div class=" row pt-5">
 
                 <!-- Grid column -->
                 <div class="col-md-4 mt-md-0 mt-3">
