--- a/index.html
+++ b/index.html
@@ -50,7 +50,26 @@
         <div class="carousel-inner">
 
             <div class="carousel-item active">
-                <img src="img/bg-1.png" alt="Carousel Image " class="img-fluid">
+                <img src="img/bg-1.png" alt="Carousel Image " class="img-fluid bg1">
+                <div class="carousel-caption d-none d-md-block hero-copy">
+                    <h2>
+                        <span class="first-line">Grab Your Copy Of</span>
+                        <br>
+                        <span class="second-line"> The <span class="brown-color">Premium</span> Quality</span>
+                        <br>
+                        <span class="second-line">PSD Template For <span class="brown-color">free</span></span>
+                    </h2>
+                    <a href="#" class="download-btn">
+                        <span class="btn-text">
+                            Download
+                            <i class="fas fa-download ml-2 mb-1"></i>
+                        </span>
+                    </a>
+                </div>
+            </div>
+
+            <!-- <div class="carousel-item">
+                <img src="img/bg-2.png" alt="Carousel Image " class="img-fluid bg2">
                 <div class="carousel-caption d-none d-md-block hero-copy">
                     <h2>
                         <span class="first-line">Grab Your Copy Of</span>
@@ -69,7 +88,7 @@
             </div>
 
             <div class="carousel-item">
-                <img src="img/bg-2.png" alt="Carousel Image " class="img-fluid">
+                <img src="img/bg-3.png" alt="Carousel Image " class="img-fluid bg3">
                 <div class="carousel-caption d-none d-md-block hero-copy">
                     <h2>
                         <span class="first-line">Grab Your Copy Of</span>
@@ -85,26 +104,7 @@
                         </span>
                     </a>
                 </div>
-            </div>
-
-            <div class="carousel-item">
-                <img src="img/bg-3.png" alt="Carousel Image " class="img-fluid">
-                <div class="carousel-caption d-none d-md-block hero-copy">
-                    <h2>
-                        <span class="first-line">Grab Your Copy Of</span>
-                        <br>
-                        <span class="second-line"> The <span class="brown-color">Premium</span> Quality</span>
-                        <br>
-                        <span class="second-line">PSD Template For <span class="brown-color">free</span></span>
-                    </h2>
-                    <a href="#" class="download-btn">
-                        <span class="btn-text">
-                            Download
-                            <i class="fas fa-download ml-2 mb-1"></i>
-                        </span>
-                    </a>
-                </div>
-            </div>
+            </div> -->
         </div>
         <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
