--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     </div>
     <!--- Blog -->
-    <div class="container-fluid" id="blog">
+    <div class="container" id="blog">
         <div class="row text-center">
             <div class="col-12 mb-5">
                 <h3 class="display-5 brown-color text-uppercase">our blog</h3>
@@ -173,17 +173,12 @@
                     </P>
                 </div>
             </div>
-
-
-
-
-
-            <div class="col-12 d-flex justify-content-center">
-                <div class="col-4">
+            <div class="col-12 d-flex justify-content-center mobile-blog">
+                <div class="col-xl-4 col-lg-6 col-sm-7">
                     <img src="img/blog.png" alt="blog" class="img-fluid">
                 </div>
 
-                <dir class="col-4 text-left">
+                <dir class="col-xl-4 text-left col-lg-6  col-sm-5">
                     <p class="date">20 March 2014</p>
                     <p>
                         Typi non habent claritatem insitam
@@ -197,8 +192,8 @@
 
             </div>
 
-            <div class="col-12 d-flex justify-content-center">
-                <dir class="col-4 text-right">
+            <div class="col-12 d-flex justify-content-center mobile-blog-direcion">
+                <dir class="col-xl-4 col-lg-6   text-right  col-sm-5">
                     <p class="date">20 March 2014</p>
                     <p>
                         Typi non habent claritatem insitam
@@ -209,18 +204,18 @@
                         facilisis at vero eros et accumsan et iusto odio dignissim qui [...]
                     </p>
                 </dir>
-                <div class="col-4">
+                <div class="col-xl-4 col-lg-6 col-sm-7">
                     <img src="img/blog.png" alt="blog" class="img-fluid">
                 </div>
 
             </div>
 
-            <div class="col-12 d-flex justify-content-center">
-                <div class="col-4">
+            <div class="col-12 d-flex justify-content-center mobile-blog">
+                <div class="col-xl-4 col-lg-6 col-sm-7">
                     <img src="img/blog.png" alt="blog" class="img-fluid">
                 </div>
 
-                <dir class="col-4 text-left">
+                <dir class="col-xl-4 col-lg-6 text-left col-sm-5">
                     <p class="date">20 March 2014</p>
                     <p>
                         Typi non habent claritatem insitam
@@ -287,7 +282,8 @@
                         illum dolore.</p>
                     <p class="footer-text-color">
                         eugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent
-                        luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta
+                        luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum
+                        soluta
                     </p>
 
 
@@ -329,7 +325,8 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <p class="date-footer ">about 2 days ago <span class="twitter">@kristianplatt</span> </p>
+                            <p class="date-footer ">about 2 days ago <span class="twitter">@kristianplatt</span>
+                            </p>
                             <p class="footer-text-color postfooter">Good work buddy</p>
                         </li>
                         <li>
@@ -353,7 +350,8 @@
                     <h4 class="text-black text-white">Our Address</h4>
                     <p class="footer-text-color">
                         Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est
-                        etiam processus dynamicus,luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+                        etiam processus dynamicus,luptatum zzril delenit augue duis dolore te feugait nulla
+                        facilisi.
                         Nam liber tempor cum soluta
                     </p>
                     <ul>
