--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
             <div class="carousel-item active">
                 <img src="img/bg-1.png" alt="Carousel Image " class="img-fluid bg1">
-                <div class="carousel-caption d-none d-md-block hero-copy">
+                <div class="carousel-caption hero-copy">
                     <h2>
                         <span class="first-line">Grab Your Copy Of</span>
                         <br>
@@ -68,9 +68,9 @@
                 </div>
             </div>
 
-            <!-- <div class="carousel-item">
+            <div class="carousel-item">
                 <img src="img/bg-2.png" alt="Carousel Image " class="img-fluid bg2">
-                <div class="carousel-caption d-none d-md-block hero-copy">
+                <div class="carousel-caption  hero-copy">
                     <h2>
                         <span class="first-line">Grab Your Copy Of</span>
                         <br>
@@ -89,7 +89,7 @@
 
             <div class="carousel-item">
                 <img src="img/bg-3.png" alt="Carousel Image " class="img-fluid bg3">
-                <div class="carousel-caption d-none d-md-block hero-copy">
+                <div class="carousel-caption   hero-copy">
                     <h2>
                         <span class="first-line">Grab Your Copy Of</span>
                         <br>
@@ -104,7 +104,7 @@
                         </span>
                     </a>
                 </div>
-            </div> -->
+            </div>
         </div>
         <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -290,7 +290,7 @@
                 </div>
                 <!-- Grid column -->
 
-                <hr class="clearfix w-100 d-md-none pb-3">
+                <hr class="clearfix w-100 pb-3">
 
                 <!-- Grid column -->
                 <div class="col-md-3 mb-md-0 mb-3">
