--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
     <div class="container" id="blog">
         <div class="row text-center">
             <div class="col-12 mb-5">
-                <h3 class="display-5 brown-color text-uppercase">our blog</h3>
-                <hr />
-                <div class="col-md-4 mx-auto">
+                <h3 class=" brown-color text-uppercase semi title">our blog</h3>
+                <hr class="line brown-color" />
+                <div class="col-md-4 mx-auto brown-color">
                     <P>
                         Nam liber tempor cum soluta nobis eleifend option
                         congue nihil imperdiet doming id quod mazim
@@ -179,7 +179,7 @@
                 </div>
 
                 <dir class="col-xl-4 text-left col-lg-6  col-sm-5">
-                    <p class="date">20 March 2014</p>
+                    <p class="date brown-color">20 March 2014</p>
                     <p>
                         Typi non habent claritatem insitam
                     </p>
@@ -194,7 +194,7 @@
 
             <div class="col-12 d-flex justify-content-center mobile-blog-direcion">
                 <dir class="col-xl-4 col-lg-6   text-right  col-sm-5">
-                    <p class="date">20 March 2014</p>
+                    <p class="date brown-color">20 March 2014</p>
                     <p>
                         Typi non habent claritatem insitam
                     </p>
@@ -216,7 +216,7 @@
                 </div>
 
                 <dir class="col-xl-4 col-lg-6 text-left col-sm-5">
-                    <p class="date">20 March 2014</p>
+                    <p class="date brown-color">20 March 2014</p>
                     <p>
                         Typi non habent claritatem insitam
                     </p>
@@ -237,7 +237,7 @@
     <div class="container-fluid contact-padding contact" id="contact">
         <div class="row text-center">
             <div class="col-12">
-                <h3 class="display-5">Contact</h3>
+                <h3 class="title semi brown-color">Contact</h3>
 
             </div>
         </div>
@@ -289,8 +289,6 @@
 
                 </div>
                 <!-- Grid column -->
-
-                <hr class="clearfix w-100 pb-3">
 
                 <!-- Grid column -->
                 <div class="col-md-3 mb-md-0 mb-3">
